tests/deploy_errors/pipeline_bad_arg/error.txt
Error: 
    8 | create instance passthrough;
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Argument `snot` is required, but no defaults are provided in the definition and no final values in the instance
